@@ -2,5 +2,5 @@ debug.txt
 error.txt
 debugLog.txt
 
-.sublime-project
-.sublime-workspace
+*.sublime-project
+*.sublime-workspace
